data updates for upcoming closures